# dfo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MIGRATIONS.md  MVP.md  MVP_RULES_SCOPE.md  QUICKSTART.md  README.md  SECURITY.md  TODO.md  USER_GUIDE.md  dfo  dfo.sh  environment.yml  pyproject.toml
.claude/agents/: project-test-runner.md
dfo/: __init__.py  cli.py
dfo/cli/: __init__.py  main.py
dfo/cmd/: azure.py  config.py  db.py  rules.py  version.py
dfo/config/: __init__.py
dfo/core/: __init__.py  auth.py  config.py  models.py
docs/: ARCHITECTURE.md  ARCHITECTURE_FLOW.md  CODE_STYLE.md  CONTRIBUTING.md  DATABASE_CONVENTIONS.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_AUDIT.md  E2E_TEST_WORKFLOW.md  EXECUTION_DESIGN.md  EXECUTION_WORKFLOW_GUIDE.md  FEATURE_DIRECT_EXECUTION.md  FEATURE_HELPER_SCRIPTS.md  FEATURE_STATUS_COMMAND.md  GENAI_LEARNINGS.md  IMPLEMENTATION_PLAN_DIRECT_EXECUTION.md  M4.1_COMPLETION.md  M4.1_DB_SCHEMA_PLAN.md  M4.1_PLANNING.md  M4.1_PROGRESS_REVIEW.md  MANUAL_TESTING_DIRECT_EXECUTION.md  MIGRATIONS.md  MILESTONE_1_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_3_PLAN.md  NEXT_MILESTONES.md  PLAN_STATUS.md  README.md  REPORT_MODULE_DESIGN.md  ROADMAP.md  RULES_INTEGRATION_PLAN.md  STATUS.md  TESTING_GUIDE.md  TESTING_INVENTORY_BROWSE.md  TEST_COVERAGE_ANALYSIS.md  TROUBLESHOOTING.md  VISUALIZATIONS.md  azure_pricing.md  azure_vm_selection_strategy.md  multi_rule_architecture.md  rule_naming_refactor.md  (+3 more)
examples/: visualization_demo.py  visualize_my_vms.py
site/: index.html
tests/: test_rules.py
tools/: README.md
(+145 files in other folders)
