[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="dfo"
version="0.1.0"
description = "DevFinOps CLI - Multi-cloud FinOps optimization toolkit"
license = {text = "LGPL-3.0-or-later"}
authors = [{name = "Vedanta Barooah"}]
requires-python=">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
dfo="dfo.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
